--- a/style.css
+++ b/style.css
@@ -51,6 +51,17 @@ h3 {
 	margin-bottom: 1em;
 }
 
+h4 {
+	display: block;
+	width: 100%;
+	float: none;
+	color: #ccc;
+	font-weight: normal;
+	font-size: 80%;
+	margin: 3em 0 0.5em;
+}
+
+
 ol, ul {
 	margin-left: 1.2em;
 }
@@ -86,32 +97,39 @@ label.error {
 	padding: .5em;
 }
 
-/* Styling for instructions */
+/* styling for instructions */
+
 #msform fieldset.text, #msform fieldset.validate {
 	padding-right: 300px;
 }
 
-/*Hide all except first fieldset*/
+/* hide all fieldsets except the first */
+
 #msform fieldset:not(:first-of-type) {
 	display: none;
 }
 
-/*inputs*/
+/* inputs */
+
 #msform input, #msform textarea, #msform select {
+	display: block;
+	float: none;
 	padding: 10px 2px;
 	margin: .5em 0 1.5em;
 	border: 1px solid #ccc;
 	border-radius: 3px;
-	width: 100%;
+	width: 70%;
 	box-sizing: border-box;
 	font-family: Lucida Grande, Lucida Sans Unicode, Lucida Sans, sans-serif;
 	color: #2C3E50;
 	font-size: 100%;
 }
 
-/*buttons*/
-#msform .button {
+/* buttons */
+
+#msform input.button {
 	display: block;
+	float: left;
 	width: 200px;
 	background: #27AE60;
 	text-align: center;
@@ -128,53 +146,28 @@ label.error {
 	box-shadow: 0 0 0 2px white, 0 0 0 3px #27AE60;
 }
 
+#msform .button.single {
+	float: none;
+}
+
+#msform .button.right {
+	float: right;
+	margin: 10px 0;
+}
+
 #msform .blue {
 	background: rgb(0, 50, 250);
 }
 
-.float {
-	float: left;
-}
-
-#msform .sample {
-	width: 800px;
-	height: 200px;
-    border: 0;
-	margin-right: 0;
-	border-radius: 0;
-}
-
-h4 {
-	color: #ccc;
-	font-weight: normal;
-	font-size: 80%;
-	margin: 3em 0 0.5em;
-}
-
-.bar {
-	display: block;
-	overflow: hidden;
-	background-color: #eee;
-	width: 827px;
-	height: 10px;
-}
-
-.progressbar {
-	display: block;
-	background-color: #ddd;
-	width: 0;
-	height: 10px;
-}
-
-/* Slider */
+/* slider */
 
 .slider {
-  display: inline-block;
-  width: 100%;
+  display: block;
+  width: 70%;
   font-size: 12px;
   text-align: left;
   padding: 0;
-  margin: 1em 0;
+  margin: 1em 0 2em 0;
 }
 
 .slider span {
@@ -206,7 +199,7 @@ h4 {
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background: #000;
+  background: #27AE60;
   cursor: pointer;
 }
 
@@ -215,12 +208,37 @@ h4 {
   height: 20px;
   border: 0;
   border-radius: 50%;
-  background: #000;
+  background: #27AE60;
   cursor: pointer;
 }
 
 ::-moz-range-track {
   background: #000;
   border: 0;
+}
+
+/* trial sample */
+
+#msform .sample {
+	width: 800px;
+	height: 200px;
+    border: 0;
+	margin-right: 0;
+	border-radius: 0;
+}
+
+.bar {
+	display: block;
+	overflow: hidden;
+	background-color: #eee;
+	width: 100%;
+	height: 10px;
+}
+
+.progressbar {
+	display: block;
+	background-color: #ddd;
+	width: 0;
+	height: 10px;
 }
 
