--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ label.error {
 	margin: .5em 0 1.5em;
 	border: 1px solid #ccc;
 	border-radius: 3px;
-	width: 70%;
+	width: 100%;
 	box-sizing: border-box;
 	font-family: Lucida Grande, Lucida Sans Unicode, Lucida Sans, sans-serif;
 	color: #2C3E50;
@@ -163,7 +163,7 @@ label.error {
 
 .slider {
   display: block;
-  width: 70%;
+  width: 100%;
   font-size: 12px;
   text-align: left;
   padding: 0;
@@ -172,9 +172,16 @@ label.error {
 
 .slider span {
 	display: block;
+	width: 33%;
 	text-align: left;
 	float: left;
 	font-style: italic;
+	margin-bottom: 1em;
+}
+
+.slider span.slider_value {
+	text-align: center;
+	float: left;
 }
 
 .slider span.right {
@@ -182,7 +189,8 @@ label.error {
 	float: right;
 }
 
-#msform input.slider__range {
+
+#msform input.rangeslider {
   -webkit-appearance: none;
   width: 100%;
   height: 2px;
@@ -193,7 +201,7 @@ label.error {
   margin: 0;
 }
 
-#msform input.slider__range::-webkit-slider-thumb {
+#msform input.rangeslider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   width: 20px;
@@ -203,7 +211,7 @@ label.error {
   cursor: pointer;
 }
 
-#msform input.slider__range::-moz-range-thumb {
+#msform input.rangeslider::-moz-range-thumb {
   width: 20px;
   height: 20px;
   border: 0;
