--- a/style.css
+++ b/style.css
@@ -155,6 +155,8 @@ label.error {
 	margin: 10px 20px 10px 0;
 	border-radius: 5px;
 	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 }
 
 #msform .button:hover, #msform .button:focus {
@@ -191,8 +193,10 @@ label.error {
 }
 
 #msform div.trialarea .sample {
-	width: 800px;
-	height: 200px;
+	width: 100%;
+	min-width: 500px;
+	max-width: 800px;
+	max-height: 200px;
     border: 0;
 	margin: 0 auto;
 }
@@ -203,6 +207,12 @@ label.error {
 }
 #msform div.trialarea input.button.right {
 	margin: 10px 0;
+}
+
+@media (max-width: 1000px) {
+	#msform div.trialarea input.button {
+		font-size: 80%;
+	}
 }
 
 /* slider */
