--- a/style.css
+++ b/style.css
@@ -217,6 +217,12 @@ label.error {
 	#msform div.trialarea input.button {
 		font-size: 80%;
 	}
+	#msform div.trialarea .sample img {
+		width: 750px;
+		height: 300px;
+	    border: 0;
+		margin: 0 auto;
+	}
 }
 
 /* slider */
